# ftc-emu

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  dev.sh  docker-compose.dev.yml
app/: index.html
app/src-tauri/: Cargo.toml
app/src-tauri/src/: main.rs
ftc-emu/: Cargo.toml
ftc-emu-www/: Dockerfile  Dockerfile.dev  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ftc-emu-www/src/: App.css  App.tsx  index.css  main.tsx
ftc-emu-www/src/components/: game-scene.tsx  theme-provider.tsx  use-theme.tsx
ftc-emu-www/src/components/menubars/: top-menubar.tsx
ftc-emu-www/src/hooks/: use-wasm.ts
